...
        android:layout_marginTop="16dp"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/carImageView"
        app:layout_constraintTop_toTopOf="@+id/background"
        tools:text="Alpine roadster" />

    <TextView
        android:id="@+id/carPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
...
